# afya-ya-akili-mcp

./: CONTRIBUTING.md  Dockerfile  README.md  glama.json  pyproject.toml  smithery.yaml
.github/workflows/: ci.yml
src/afya_ya_akili_mcp/: __init__.py  server.py
