[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "afya-ya-akili-mcp"
version = "0.1.1"
description = "MCP server for Kenya mental health resources — therapist finder, crisis lines, t"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["fastmcp>=0.9"]

[project.scripts]
afya-ya-akili-mcp = "afya_ya_akili_mcp.server:mcp.run"

[tool.setuptools.packages.find]
where = ["src"]
